tests/__snapshots__/validation-configFile-single-quoted-option-names.snap.txt
Error: String literal with double quotes expected.

  1 | {
  2 |   'failFast': true,
    |   ~~~~~~~~~~
  3 |   "target": ["current"]
  4 | }
  5 | 

      at ./tstyche.config.json:2:3

